Implement one backspace

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drunk keyboard!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <script src="app.js"></script>
+    <title>No Regrets Keyboard</title>
 </head>
 <body>
-    sssssss
-    <form>
-        <textarea rows = "5" cols = "40" placeholder = "Tell me about yourself."></textarea>
-    </form>
-    
+    <div class = "writepage">.</div>
 </body>
 </html>
